--- a/sumo_opencv/sumo_opencv.vcxproj
+++ b/sumo_opencv/sumo_opencv.vcxproj
@@ -149,7 +149,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aruco_func.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="reconstruct3d.cpp" />
+    <ClCompile Include="serial.cpp" />
+    <ClCompile Include="stitcher.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="aruco_func.h" />
+    <ClInclude Include="config.h" />
+    <ClInclude Include="reconstruct3d.h" />
+    <ClInclude Include="serial.h" />
+    <ClInclude Include="stitcher.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
