--- a/sumo_opencv/sumo_opencv.vcxproj.filters
+++ b/sumo_opencv/sumo_opencv.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="aruco_func.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="serial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -30,12 +27,15 @@
     <ClCompile Include="reconstruct3d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arucoFunc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fileOutput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="aruco_func.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="serial.h">
@@ -45,6 +45,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="reconstruct3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fileOutput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="arucoFunc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
