-compiled x64 Release version

--- a/sumo_opencv/sumo_opencv.vcxproj.filters
+++ b/sumo_opencv/sumo_opencv.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="fileOutput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="detect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="arucoFunc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="detect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
