--- a/sumo_opencv/sumo_opencv.vcxproj
+++ b/sumo_opencv/sumo_opencv.vcxproj
@@ -138,7 +138,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>D:\Masterarbeit\opencv\build-3.2.0_vs15\install\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="arucoFunc.cpp" />
+    <ClCompile Include="detect.cpp" />
     <ClCompile Include="fileOutput.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="reconstruct3d.cpp" />
@@ -162,6 +163,7 @@
   <ItemGroup>
     <ClInclude Include="arucoFunc.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="detect.h" />
     <ClInclude Include="fileOutput.h" />
     <ClInclude Include="reconstruct3d.h" />
     <ClInclude Include="serial.h" />
