--- a/sumo_opencv/sumo_opencv.vcxproj
+++ b/sumo_opencv/sumo_opencv.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{9C6568C9-C18E-4A61-8B82-820063F01271}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>sumo_opencv</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,15 +140,15 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>E:\Documents\work\01_diss\sumos\opencv\built\install\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\OpenCV\build\install\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Documents\work\01_diss\sumos\opencv\built\install\x64\vc15\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_aruco330.lib;opencv_calib3d330.lib;opencv_core330.lib;opencv_features2d330.lib;opencv_flann330.lib;opencv_highgui330.lib;opencv_imgcodecs330.lib;opencv_imgproc330.lib;opencv_stitching330.lib;opencv_video330.lib;opencv_videoio330.lib;opencv_videostab330.lib;opencv_xfeatures2d330.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\OpenCV\build\install\x64\vc15\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_aruco341.lib;opencv_calib3d341.lib;opencv_core341.lib;opencv_features2d341.lib;opencv_flann341.lib;opencv_highgui341.lib;opencv_imgcodecs341.lib;opencv_imgproc341.lib;opencv_stitching341.lib;opencv_video341.lib;opencv_videoio341.lib;opencv_videostab341.lib;opencv_xfeatures2d341.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -156,7 +156,6 @@
     <ClCompile Include="detect.cpp" />
     <ClCompile Include="fileOutput.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="reconstruct3d.cpp" />
     <ClCompile Include="serial.cpp" />
     <ClCompile Include="stitcher.cpp" />
   </ItemGroup>
@@ -165,7 +164,6 @@
     <ClInclude Include="config.h" />
     <ClInclude Include="detect.h" />
     <ClInclude Include="fileOutput.h" />
-    <ClInclude Include="reconstruct3d.h" />
     <ClInclude Include="serial.h" />
     <ClInclude Include="stitcher.h" />
   </ItemGroup>
